# new_ies_optimization

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  OPENBAYES.md  OPENBAYES_TASK_COMMANDS.md  Readme.md  case_config.py  cchp_gaproblem.py  cchp_gasolution.py  operation.py  pyproject.toml  run.py  run_pipeline.py  solver_config.py  项目索引目录.md
archive/: gasolution.py  heat_ele_gaproblem.py  heat_ele_gasolution.py
data/: mergedData.csv  optimizationData.xlsx  songshan_lake_data.csv  songshan_lake_typical.xlsx  typicalDayData.xlsx
docs/: README.md
learn/: ptpip.txt  pyomo-tutorials.yaml
scripts/: README.md  archive_ieee_unit_lambda.py  archive_pre_device_rebuild_2026-04-20.ps1  archive_pre_device_rebuild_2026-04-20.py  archive_pre_rebuild_results.ps1  check_songshan_data.py  compare_parameter_scales.py  create_q1_progress_pptx.py  enhanced_analysis.py  export_ieee_conference_data.py  generate_agency_softcopyright_package.py  generate_conference_figures.py  generate_softcopyright_figures.py  generate_songshan_data.py  kmeansClustering.m  kmeans_clustering.py  lambda_sensitivity.py  method_scenario_matrix.py  openbayes_run_experiments.sh  openbayes_setup.sh  pareto_hypervolume.py  pareto_overlay.py  phase2_sentinel_filter.py  post_analysis.py  post_analysis_report.py  rebuild_openbayes_env.sh  redraw_carnot_figures.py  resilience_test.py  run_existing_post_analysis.py  run_exp4_sensitivity.py  run_parameter_sensitivity.py  test_feasibility.py
skills/: README.md
卡诺电池探索/: carnot_battery_module.py  carnot_integration_guide.md  operation_carnot_integration.py  (+1 more)
(+194 files in other folders)
